--- a/src/App.css
+++ b/src/App.css
@@ -9,20 +9,20 @@ body{
     src: url(https://fonts.gstatic.com/s/poppins/v15/pxiEyp8kv8JHgFVrJJbecmNE.woff2) format('woff2');
     unicode-range: U+0900-097F, U+1CD0-1CF6, U+1CF8-1CF9, U+200C-200D, U+20A8, U+20B9, U+25CC, U+A830-A839, U+A8E0-A8FB;
   }
-  /* latin-ext */
-  @font-face {
-    font-family: 'Poppins';
-    font-style: normal;
-    src: url(https://fonts.gstatic.com/s/poppins/v15/pxiEyp8kv8JHgFVrJJnecmNE.woff2) format('woff2');
-    unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
-  }
-  /* latin */
-  @font-face {
-    font-family: 'Poppins';
-    font-style: normal;
-    src: url(https://fonts.gstatic.com/s/poppins/v15/pxiEyp8kv8JHgFVrJJfecg.woff2) format('woff2');
-    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-  }
+/* latin-ext */
+@font-face {
+  font-family: 'Poppins';
+  font-style: normal;
+  src: url(https://fonts.gstatic.com/s/poppins/v15/pxiEyp8kv8JHgFVrJJnecmNE.woff2) format('woff2');
+  unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
+}
+/* latin */
+@font-face {
+  font-family: 'Poppins';
+  font-style: normal;
+  src: url(https://fonts.gstatic.com/s/poppins/v15/pxiEyp8kv8JHgFVrJJfecg.woff2) format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
 
 h1 {
     color: #4274F3;
@@ -32,7 +32,7 @@ h1 {
     margin: auto;
     width: 50%;
     padding: 10px;
-    text-align: center;
+    text-align: center; 
     vertical-align: middle;
     padding-top: 20px;
 }
@@ -43,7 +43,18 @@ h2 {
     color: #000;    
     text-align: center;
     vertical-align: middle;
-  }
+}
+
+.logo {
+  padding-top: 2em;
+  font-size: 60px;
+}
+
+.loginPage {
+  display: grid;
+  grid-template-columns: 1fr;
+  justify-items: center;
+}
 
 /* Navigation Bar */
 .navbar {
@@ -53,6 +64,7 @@ h2 {
     padding: 0;
     overflow: hidden;
     background-color: #4274F3;
+    box-shadow: 0px 5px 5px grey;
 }
 
 .title {
@@ -81,7 +93,7 @@ h2 {
 }
   
 .navbar li a:hover {
-    background-color: #111;
+    text-decoration: underline;
 }
 
 /* Button */
