--- a/src/Components/Task.css
+++ b/src/Components/Task.css
@@ -1,9 +1,88 @@
+.rubric {
+    display:grid;
+    grid-template-columns:1fr 2fr 1fr;
+}
+
+.reqCheckButton {
+    width: 40px;
+    height: 40px;
+    background-color: rgb(212, 212, 212);
+    top: 0px;
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 20px;
+    border: 1px solid white;
+    border-radius: 30%;
+    align-items: center; 
+    margin: auto; 
+  }
+  
+  .requirement {
+    display:grid;
+    grid-template-columns:4fr 1fr;
+    background-color: #95bdf8;
+    border: 1px;
+    align-items: center;
+    justify-items: flex-start ;
+    padding: 0;
+    margin: 0;
+  }
+  
+  .requirement:nth-child(odd)  {
+    display:grid;
+    grid-template-columns:4fr 1fr;
+    background-color: #869ec5;
+    border: 1px;
+    align-items: center;
+    justify-items: flex-start ;
+    padding: 0;
+    margin: 0;
+  }
+  
+  .requirement h1{
+    display :block;
+    color: black;
+    font-size: 20px;
+    align-items: center;
+    width: auto;
+    justify-items: flex-start ;
+  }
+  
+  .requirementDone {
+    display:grid;
+    grid-template-columns:4fr 1fr;
+    background-color: rgb(140, 207, 140);
+    border: 1px;
+    align-items: center;
+    justify-items: flex-start ;
+    padding: 0;
+    margin: 0;
+  }
+  
+  .requirementDone:nth-child(odd) {
+    display:grid;
+    grid-template-columns:4fr 1fr;
+    background-color: rgb(125, 189, 125);
+    border: 1px;
+    align-items: center;
+    justify-items: flex-start ;
+    padding: 0;
+    margin: 0;
+  }
+  
+  .requirementDone h1{
+    display :block;
+    color: black;
+    font-size: 20px;
+    align-items: center;
+    justify-items: flex-start ;
+    width: auto;
+  }
+
 .header {
-    display: flex;
-    justify-content: left;
-    padding: 40px;
-    height: 80px;
-    margin: 40px;
+    justify-content: center;
+    padding: 20px;
+    margin: 20px;
     position: relative;
     top: 20px;
 }
@@ -32,10 +111,28 @@
     font-size: 15px;
 }
 
+.headerButtons {
+    display: grid;
+    grid-template-columns: 1fr 2fr 1fr;
+    justify-items: center;
+}
+
+.requirementsList {
+    background-color: grey;
+    color: black;
+    grid-column:2/3;
+}
+
+.requirementsList h1 {
+    color: black;
+}
+
 .page {
     align-items: center;
     margin-left: auto;
     margin-right: auto;
+    justify-content: center;
+    margin-bottom: 2em;
     width: 60%;
 }
 .page h3 {
@@ -55,4 +152,9 @@
     display: block;
     margin-left: auto;
     margin-right: auto;
+}
+
+.taskBlock {
+    margin-top: 2em;
+    margin-bottom: 2em;
 }
