--- a/src/App.css
+++ b/src/App.css
@@ -2,33 +2,13 @@ body{
     background-color: #ffffff;
  }
 
-/* Text Styling */
-@font-face {
-    font-family: 'Poppins';
-    font-style: normal;
-    src: url(https://fonts.gstatic.com/s/poppins/v15/pxiEyp8kv8JHgFVrJJbecmNE.woff2) format('woff2');
-    unicode-range: U+0900-097F, U+1CD0-1CF6, U+1CF8-1CF9, U+200C-200D, U+20A8, U+20B9, U+25CC, U+A830-A839, U+A8E0-A8FB;
-  }
-/* latin-ext */
-@font-face {
-  font-family: 'Poppins';
-  font-style: normal;
-  src: url(https://fonts.gstatic.com/s/poppins/v15/pxiEyp8kv8JHgFVrJJnecmNE.woff2) format('woff2');
-  unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
-}
-/* latin */
-@font-face {
-  font-family: 'Poppins';
-  font-style: normal;
-  src: url(https://fonts.gstatic.com/s/poppins/v15/pxiEyp8kv8JHgFVrJJfecg.woff2) format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-}
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 h1 {
     color: #4274F3;
     font-family: "Poppins", sans-serif;
     font-size: 24px;
-    font-weight: bolder;
+    font-weight: 500px;
     margin: auto;
     width: 50%;
     padding: 10px;
@@ -40,6 +20,7 @@ h1 {
 h2 {
     font-family: "Poppins", sans-serif;
     font-size: 18px;
+    font-weight: normal;
     color: #000;    
     text-align: center;
     vertical-align: middle;
@@ -64,15 +45,16 @@ h2 {
     padding: 0;
     overflow: hidden;
     background-color: #4274F3;
-    box-shadow: 0px 5px 5px grey;
 }
 
 .title {
     font-family: "Poppins", sans-serif;
     font-weight: bolder;
     float: left;
-    font-size: 14px;
-    padding: 0px 16px;
+    font-size: 18px;
+    padding-top: 0px;
+    padding-bottom: 0px;
+    padding-left: 16px;
     display: block;
     color: white;
     text-align: center;    
@@ -81,8 +63,10 @@ h2 {
 
 .navbar li {
     font-family: "Poppins", sans-serif;
+    font-weight: normal;
     float: right;
-    padding: 14px 16px;
+    padding: 0px 16px;
+    padding-top: 18px;
 }
   
 .navbar li a {
@@ -91,6 +75,7 @@ h2 {
     text-align: center;    
     text-decoration: none;
 }
+
   
 .navbar li a:hover {
     text-decoration: underline;
