--- a/src/Components/GoalsScreen.css
+++ b/src/Components/GoalsScreen.css
@@ -14,6 +14,14 @@
   align-items:stretch;
 }
 
+.demoLabel {
+  grid-column:2/3;
+  justify-content: center;
+  color: rgb(83, 128, 211);
+  font-size: 15px;
+  margin-bottom: 2em;
+}
+
 .pageTitle {
   grid-column:2/3;
   justify-content: center;
