--- a/src/Components/Mission.css
+++ b/src/Components/Mission.css
@@ -13,23 +13,35 @@
     justify-content: center;
 }
 
-.Task {
+.Task {    
+    position: relative;
+    display: flex;
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
     background-color: #4274F3;
     color: white;
     font-family: "Poppins", sans-serif;
     font-size: 35px;
-    margin: auto;
-    margin-top: 20px;
-    border-radius: 50%;
-    width: 200px;
-    height: 200px;
-    display: flex;
+    box-shadow: 0 1px 2px rgba(0,0,0,0.15);
+    transition: all 0.3s ease-in-out;
     align-items: center; 
     justify-content: center;
+    margin: auto;
+    margin-top: 20px;
 }
 
+
+  /* Scale up the box */
+.Task:hover {
+    transform: scale(1.05, 1.05);
+    box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+    background-color: navy;
+    cursor: pointer;
+}
+  
 .card {
-    padding-top: 5px;
+    padding: 20px;
     background-color: #CFDCFC;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
@@ -38,8 +50,42 @@
     border-radius: 5px;
 }
 
+.card h1 {
+    width: 100%;
+}
+
 ul {
     color: #FFF;
     font-size: 18px;
     text-align: center;
+  }
+
+
+/*.Task:first-child {
+    margin-top: 0;
+}
+.Task:after {
+    position: absolute; 
+    border: 3px solid #000; 
+    width: 0; 
+    height: 15px; 
+    display: block; 
+    content: ''; 
+    left: 50%; 
+    z-index: 1; 
+    top: 200px; 
+    margin-left: -1px;
+}*/
+
+.verticalLine {
+    position: relative; 
+    border: 3px solid #000; 
+    width: 0; 
+    height: 631px; 
+    display: block; 
+    content: ''; 
+    left: 50%; 
+    z-index: 1; 
+    top: -656px; 
+    margin-left: -1px;
   }
