--- a/src/Components/Question.css
+++ b/src/Components/Question.css
@@ -1,19 +1,29 @@
 .chunk{
-  padding-top: 10px;
-  padding-bottom: 10px;
-  background-color: #CFDCFC;
-  margin-top: 10px;
+  padding-top: 50px;
+  padding-bottom: 50px;
+  background-color: #CFDCFC; 
+  width: 100%;
+}
+
+.questCard {
+  vertical-align: middle;
+  text-align: center;
+  margin:auto;
+  width:700px;
+  background-color: #fff;
+  box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.2);
+  border-radius: 15px;
 }
 
 .questionBlock {
-  vertical-align: middle;
-  text-align: center;
   padding-left: 0;
   padding-bottom: 10px;
   margin-top: 0px;
   padding-top: 0px;
   top: 10px;
   font-family: "Poppins", sans-serif;
+  width:700px;
+  
 }
 
 .questionBlock input[type='radio'], label{   
@@ -24,29 +34,48 @@
 
 .questionBlock textarea{   
   resize: none;
-  width: 90%;
+  width: 85%;
   height: 5em;
   font-size: 18px;
   margin-bottom:1em;
+  background-color: rgba(230, 230, 230, 0.329);
+  border-color: #fff;
+  padding: 10px;
 }
-
 
 .answerChoiceItem {
-  vertical-align: baseline;
-  padding: 10px;
+  vertical-align: middle;
+  padding: 5px;
   text-align: left;
-  font-size: 18px;
-}
-
-.hline {
-  border-top: 1px solid rgb(64, 66, 77);
-  margin-left: 1em;
-  margin-right: 1em;
+  font-size: 14px;
+  width: 550px;
+  background: #F2F2F2;
+  border-radius: 27.5px;  
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 20px;
 }
 
 .chunk h2 {
-  font-size: 22px;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  padding-top: 20px;
 }
 
+.radio {
+  position: absolute;
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.radio img {
+  cursor: pointer;
+}
+
+.radio:checked img {
+  
+}
 
 
