--- a/src/Components/Task.css
+++ b/src/Components/Task.css
@@ -7,7 +7,7 @@
     width: 40px;
     height: 40px;
     background-color: rgb(212, 212, 212);
-    top: 0px;
+    top: 5px;
     color: white;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 20px;
@@ -24,8 +24,8 @@
     border: 1px;
     align-items: center;
     justify-items: flex-start ;
-    padding: 0;
-    margin: 0;
+    margin: 0;    
+    padding-bottom: 10px;
   }
   
   .requirement:nth-child(odd)  {
@@ -35,7 +35,7 @@
     border: 1px;
     align-items: center;
     justify-items: flex-start ;
-    padding: 0;
+    padding-bottom: 10px;
     margin: 0;
   }
   
@@ -46,6 +46,7 @@
     align-items: center;
     width: auto;
     justify-items: flex-start ;
+    font-weight: normal;
   }
   
   .requirementDone {
@@ -55,8 +56,9 @@
     border: 1px;
     align-items: center;
     justify-items: flex-start ;
-    padding: 0;
+    padding-bottom: 10px;
     margin: 0;
+    
   }
   
   .requirementDone:nth-child(odd) {
@@ -66,7 +68,7 @@
     border: 1px;
     align-items: center;
     justify-items: flex-start ;
-    padding: 0;
+    padding-bottom: 10px;
     margin: 0;
   }
   
@@ -77,38 +79,37 @@
     align-items: center;
     justify-items: flex-start ;
     width: auto;
+    font-weight: normal;
   }
 
 .header {
+    background-color: #fff;
+    box-shadow: 0px 1px 12px rgba(0, 0, 0, 0.2);
     justify-content: center;
-    padding: 20px;
-    margin: 20px;
     position: relative;
-    top: 20px;
+    padding-top: 10px;
+    align-items: center;
+    margin-right: auto;
+    margin-left: auto;
+    vertical-align: middle;
 }
+
 .header h1 {
     color: #4274F3;
+    text-transform: uppercase;
     text-align: center;
     margin: auto;
-    font-size: 44px;
+    font-size: 20px;
     vertical-align: middle;
-    font-weight: bolder;
+    font-weight: normal;
     position: relative;
-    top: -50px;
+    letter-spacing: 0.1em;
 }
+
 .header button {
     position: relative;
     top: 0px;
-    width: 150px;
-    height: 50px;
     margin-bottom: 20px;
-    background-color: #4274F3;
-    border-radius: 10px;
-    border-color: #4274F3;
-    color: white;
-    font-family: "Poppins", sans-serif;
-    font-weight: bold;
-    font-size: 15px;
 }
 
 .headerButtons {
@@ -133,28 +134,62 @@
     margin-right: auto;
     justify-content: center;
     margin-bottom: 2em;
-    width: 60%;
+    width: 100%;
 }
 .page h3 {
-    color: rgb(64, 66, 77);
-    font-size: 18px;
-    font-weight: lighter;
-}
-.tasks img {
-    max-width: 100%;
-    display: block;
+    color: #000;
     margin-left: auto;
     margin-right: auto;
+    font-size: 18px;
+    font-weight: normal;
+    width: 700px;
+}
+
+.header img {
+  cursor: pointer;
+}
+
+.header img:hover {
+  border-radius: 50%;
+  box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.25);
 }
 
 .tasks video {
     max-width: 100%;
     display: block;
     margin-left: auto;
-    margin-right: auto;
+    margin-right: auto;    
 }
 
 .taskBlock {
-    margin-top: 2em;
-    margin-bottom: 2em;
+    margin-top: 50px;
 }
+
+.taskBlock img{
+  max-width: 100%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.rubricButton {
+  position: fixed;
+  text-align: center;
+  margin-right: 100px;
+  width: 150px;
+  height: 50px;
+  margin-top: 75px;
+  margin-left: 1800px;
+  padding-top: 20px;
+  background-color: #F2F2F2;
+  color: #4274F3;
+  font-family: "Poppins", sans-serif;
+  font-weight: 600;
+  font-size: 15px;
+  transform: rotate(270deg);
+  cursor: pointer;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+
+
