--- a/src/Components/GoalsScreen.css
+++ b/src/Components/GoalsScreen.css
@@ -185,10 +185,11 @@
   background-color: transparent;
 }
 
-.dropdownArrowButton {
+.dropdownButton {
   position: relative;
-  width: 20px;
-  height: 20px;
+  width: auto;
+  height: auto;
+  justify-self: center;
   color: white;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 15px;
@@ -204,8 +205,8 @@
 
 .dropdownItem {
   position: relative;
-  width: 60px;
-  height: 30px;
+  width: auto;
+  height: auto;
   background-color: grey;
   color: white;
   font-family: Arial, Helvetica, sans-serif;
