Integrate reading goals from backend

--- a/src/Components/GoalsScreen.css
+++ b/src/Components/GoalsScreen.css
@@ -14,14 +14,6 @@
   align-items:stretch;
 }
 
-.demoLabel {
-  grid-column:2/3;
-  justify-content: center;
-  color: rgb(83, 128, 211);
-  font-size: 15px;
-  margin-bottom: 2em;
-}
-
 .pageTitle {
   grid-column:2/3;
   justify-content: center;
@@ -185,10 +177,11 @@
   background-color: transparent;
 }
 
-.dropdownArrowButton {
+.dropdownButton {
   position: relative;
-  width: 20px;
-  height: 20px;
+  width: auto;
+  height: auto;
+  justify-self: center;
   color: white;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 15px;
@@ -204,9 +197,25 @@
 
 .dropdownItem {
   position: relative;
-  width: 60px;
-  height: 30px;
+  width: auto;
+  height: auto;
   background-color: grey;
+  color: white;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 20px;
+  border: 0px;
+  border-radius: 10%;
+  display: flex;
+  align-items: center; 
+  justify-content: center;
+  margin: auto;
+}
+
+.clearCategoryItem {
+  position: relative;
+  width: auto;
+  height: auto;
+  background-color: rgb(199, 4, 4);
   color: white;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 20px;
