--- a/src/Components/Task.css
+++ b/src/Components/Task.css
@@ -114,7 +114,7 @@
 
 .headerButtons {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
     justify-items: center;
 }
 
