rubric should now be fully functional

--- a/src/Components/Drawer.css
+++ b/src/Components/Drawer.css
@@ -1,10 +1,12 @@
 .buttonText {
     color: grey;
+    text-justify: center;
 }
 
 
 .blueButtonText {
     color: #4274F3;
+    text-justify: center;
 }
 
 .logoText {
