--- a/src/Components/MissionsScreen.css
+++ b/src/Components/MissionsScreen.css
@@ -1,12 +1,11 @@
 .card {
-    display:flex;
-    margin: 20px;
+    display:block;
+    margin: auto;
     padding: 20px;
     background-color: #CFDCFC;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
     width: 50%;
-    vertical-align: middle;
     border-radius: 5px;
     justify-content: center;
     justify-self: center;
@@ -15,6 +14,14 @@
 .start {
     display: flex;
     justify-content: center;
+    top: 0;
+}
+
+.progress {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    align-items: center;
+    margin: 1em;
 }
 
 .Mission {    
@@ -33,6 +40,7 @@
     justify-content: center;
     margin: auto;
     margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 .mission {
