--- a/src/Components/CourseScreen.css
+++ b/src/Components/CourseScreen.css
@@ -1,24 +1,29 @@
-@font-face {
-  font-family: 'Poppins';
-  font-style: normal;
-  src: url(https://fonts.gstatic.com/s/poppins/v15/pxiEyp8kv8JHgFVrJJbecmNE.woff2) format('woff2');
-  unicode-range: U+0900-097F, U+1CD0-1CF6, U+1CF8-1CF9, U+200C-200D, U+20A8, U+20B9, U+25CC, U+A830-A839, U+A8E0-A8FB;
-}
-
 .courseItem {
-  background-color: #F21E1D;
-  color: white;
-  font-family: "Poppins", sans-serif;
-  font-size: 35px;
-  margin: auto;
-  margin-top: 20px;
-  border-radius: 50%;
-  width: 200px;
-  height: 200px;
-  box-shadow: inset -8px -7px 4px 0px rgba(0,0,0,0.3);
-  display: flex;
-  align-items: center; 
-  justify-content: center;
+  position: relative;
+    display: flex;
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    background-color: #4274F3;
+    color: white;
+    font-family: "Poppins", sans-serif;
+    font-size: 35px;
+    box-shadow: 0 1px 2px rgba(0,0,0,0.15);
+    transition: all 0.3s ease-in-out;
+    align-items: center; 
+    justify-content: center;
+    margin-top: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    vertical-align: middle;
+  }
+
+.courseItem:hover {
+  transform: scale(1.05, 1.05);
+  box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+  background-color: navy;
+  cursor: pointer;
 }
 
 .deleteButton {
@@ -38,14 +43,6 @@
   margin: auto;
 }
 
-.courseItem h2:hover {
-  background-color: navy;
-  cursor: pointer;
-}
-
-.courseItem h2:active {
-  background-color: #F21E1D;
-}
 
 form {
   position: relative;
@@ -104,9 +101,8 @@ button:active {
 }
 
 ul {
-  color: #4274F3;
+  color: #fff;
   padding-left:0;
-  list-style-type: none;
 }
 
 .row {
