--- a/src/Components/GoalsScreen.css
+++ b/src/Components/GoalsScreen.css
@@ -36,16 +36,7 @@
 }
 
 .goal {
-  background-color: rgb(189, 189, 189);
-  color: black;
-  font-size: 35px;
-  border: 1px;
-  align-items: center;
-  grid-column:2/3;
-}
-
-.goal:nth-child(odd)  {
-  background-color: rgb(165, 165, 165);
+  background-color: rgb(223, 223, 223);
   color: black;
   font-size: 35px;
   border: 1px;
@@ -74,18 +65,7 @@
 .subGoal {
   display:grid;
   grid-template-columns:2fr 2fr 1fr;
-  background-color: #889cb9;
-  border: 1px;
-  grid-column:2/3;
-  align-items: center;
-  padding: 0;
-  margin: 0;
-}
-
-.subGoal:nth-child(odd)  {
-  display:grid;
-  grid-template-columns:2fr 2fr 1fr;
-  background-color: #71819b;
+  background-color: #bebebe;
   border: 1px;
   grid-column:2/3;
   align-items: center;
@@ -103,18 +83,7 @@
 .subGoalDone {
   display:grid;
   grid-template-columns:2fr 2fr 1fr;
-  background-color: green;
-  border: 1px;
-  grid-column:2/3;
-  align-items: center;
-  padding: 0;
-  margin: 0;
-}
-
-.subGoalDone:nth-child(odd) {
-  display:grid;
-  grid-template-columns:2fr 2fr 1fr;
-  background-color: rgb(0, 117, 0);
+  background-color: rgb(123, 218, 123);
   border: 1px;
   grid-column:2/3;
   align-items: center;
