--- a/src/Components/GoalsScreen.css
+++ b/src/Components/GoalsScreen.css
@@ -65,7 +65,7 @@
 .subGoal {
   display:grid;
   grid-template-columns:2fr 2fr 1fr;
-  background-color: #bebebe;
+  background-color: rgb(223, 223, 223);
   border: 1px;
   grid-column:2/3;
   align-items: center;
