--- a/src/Components/TaskReview/TaskReview.css
+++ b/src/Components/TaskReview/TaskReview.css
@@ -1,3 +1,26 @@
+.task-review h1 {
+  font-family: Poppins;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 36px;
+  color: #3267EF;
+}
+
+.task-review h2 {
+  bottom: 87.82%;
+  font-family: Poppins;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 30px;
+  color: #2F80ED;
+}
+
+.task-review-buttons {
+  display: flex;
+  flex-direction: row;
+}
+
 .continueButtonContainer {
   display: flex;
   align-items: center;
@@ -16,5 +39,37 @@
 }
 
 .questionReviewText {
+  color: white;
+}
+
+.options-bar-wrapper {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 500px;
+}
+
+.options-bar {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  background-color: white;
+  width: 500px;
+  text-align: center;
+  border-radius: 26px;
+}
+
+.options-bar h2 {
+  margin: 0px;
+  padding: 7px;
+  padding-bottom: 12px;
+}
+
+.options-bar h2:hover {
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+.options-bar h2:active {
   color: white;
 }
