Fixed centering issue on resize

--- a/src/Components/TaskReview/QuizReview.css
+++ b/src/Components/TaskReview/QuizReview.css
@@ -1,7 +1,6 @@
 .quiz-review {
+    margin: auto;
     width: 50%;
-    margin-left: auto;
-    margin-right: auto;
 }
 
 .percentage-bar {
@@ -10,6 +9,7 @@
 }
 
 .score-box {
+    margin: auto;
     width: 692px;
     height: 184px;
     background: #F2F2F2;
@@ -22,4 +22,28 @@
     /* Blue 1 */
     color: #2F80ED;
     padding-top: 30px;
+}
+
+.qa-box {
+    margin: auto;
+    margin-top: 20px;
+    background-color: #F2F2F2;
+    height: 500px;
+    width: 700px;
+    overflow-y: scroll;
+}
+
+.qa-box-tile {
+    background-color: white;
+    height: 300px;
+    margin: 40px;
+    padding: 15px;
+}
+
+.qa-box-tile h5 {
+    font-family: Poppins;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    color: #000000;
 }
