--- a/src/Components/ProgressOverview.css
+++ b/src/Components/ProgressOverview.css
@@ -47,3 +47,29 @@ ul {
 .card h1 {
   width: 100%;
 }
+
+.tabButtonContainer{
+  background-color: #E0E0E0;
+  border-radius: 30px;
+  width: 300px;
+  height: 50px;
+  margin: auto;
+}
+
+.tabButton{
+  top: 0;
+  margin-bottom: 0;
+  border-radius: 30px;
+  align-self: center;
+  border: none;
+}
+
+.tabButtonNotActive{
+  top: 0;
+  margin-bottom: 0;
+  border-radius: 30px;
+  align-self: center;
+  border: none;
+  background-color: #E0E0E0;
+  color: #18191F;
+}
