--- a/src/Components/Task.css
+++ b/src/Components/Task.css
@@ -202,16 +202,17 @@
   text-align: center;
   width: 150px;
   height: 50px;
-  margin-right: 100px;  
+  margin-right: 0;  
   margin-top: 75px;
-  margin-left: 1800px;
+  transform: rotate(270deg) translate(0%, 70%);
+  right: 0;
   padding-top: 20px;
   background-color: #F2F2F2;
   color: #4274F3;
   font-family: "Poppins", sans-serif;
   font-weight: 600;
   font-size: 15px;
-  transform: rotate(270deg);
+  
   cursor: pointer;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
