fixed crashing bug on task review help

--- a/src/Components/TaskReview/TaskReviewHelp.css
+++ b/src/Components/TaskReview/TaskReviewHelp.css
@@ -1,7 +1,7 @@
 .help-box {
    margin: auto;
    width: 692px;
-   height: auto;
+   height: 375px;
    background: #F2F2F2;
    box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.2);
    border-radius: 15px;
