flipt.ed icon now redirects to the home route, mission overview styling updated to match task overview, Goal form spacing issue fixed

--- a/src/Components/Goals/GoalsScreen.css
+++ b/src/Components/Goals/GoalsScreen.css
@@ -9,9 +9,10 @@
 .popupContainer {
   display:grid;
   grid-template-columns: 1fr 2fr 1fr;
-  grid-template-rows: 1fr 2fr 1fr;
+  /* grid-template-rows: 1fr 2fr 1fr; */
   justify-items:stretch;
   align-items:stretch;
+  margin: 10em;
 }
 
 .pageTitle {
