--- a/src/Components/CourseScreen.css
+++ b/src/Components/CourseScreen.css
@@ -72,21 +72,6 @@
   font-size: 15px;
   padding-right:5px;
 }
-
-/* h3 {
-  color: #4274F3;
-  font-family: "Poppins", sans-serif;
-  font-weight: bold;
-  font-size: 27px;
-}
-
-p {
-  color: white;
-  font-family: "Poppins", sans-serif;
-  font-weight: bold;
-  font-size: 15px;
-} */
-
 .btn {
   text-align: center;
 }
@@ -94,4 +79,17 @@ p {
 ul {
   color: #fff;
   padding-left:0;
+}
+
+h6 {
+  color: #4274F3;
+    font-family: "Poppins", sans-serif;
+    font-size: 50px;
+    font-weight:normal;
+    margin: auto;
+    width: 50%;
+    padding: 10px;
+    text-align: center; 
+    vertical-align: middle;
+  padding-top: 75px;
 }
