--- a/src/Components/MissionsScreen.css
+++ b/src/Components/MissionsScreen.css
@@ -65,3 +65,15 @@
 h1 {
     padding-top: 75px;
 }
+
+.previewCard {    
+    position: sticky;
+    background-color: #fff;
+    width: 500px;
+    height: 925px;
+    top: 63px;
+    right: 0;
+    box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+    z-index: 2;
+    float:right;
+}
