--- a/src/Components/Mission.css
+++ b/src/Components/Mission.css
@@ -7,10 +7,10 @@
 }
 
 .missionTitle {
-    position:absolute;
+    position:fixed;
     width: 234px;
     height: 234px;
-    top:100px;
+    top: 75px;
     border-radius: 50%;
     background-color: #fff;  
     border-style: solid;
@@ -23,8 +23,8 @@
 }
 
 .missiontext {
-    position: absolute;
-    top: 130px;
+    position: fixed;
+    top: 105px;
     width: 700px;
     height: 200px;
     left: 290px;
@@ -67,15 +67,12 @@
 
 .SubMission {
     position: relative;
-    background-color: #fff;
+    background-color: #dad8d8;
     color: #4274F3;
-    border-color: #4274F3;
-    border-style: solid;
-    border-width: 5px;
-    color: #4274F3;
+    opacity: 90%;
     font-family: "Poppins", sans-serif;
     font-size: 35px;
-    margin-left: 170px;
+    margin-left: 175px;
     margin-top: 30px;
     border-radius: 50%;
     width: 100px;
@@ -84,15 +81,15 @@
     align-items: center; 
     justify-content: center;
     z-index: 4;    
-    transition: all 0.3s ease-in-out;
-    background: url(./Images/checkmark_notDone.png);   
+    cursor:default;
 }
 
 .SubMission ul {
     position:absolute;
     width: 400px;
     height: 88px;
-    background: #F2F2F2;
+    background: #dad8d8;
+    opacity: 90%;
     border-radius: 10px;
     margin-left: 550px;
     z-index: 2;
@@ -124,12 +121,7 @@
     margin-top: 20px;
 }
 
-.SubMission:hover {
-    transform: scale(1.05, 1.05);
-    box-shadow: 0 5px 15px rgba(0,0,0,0.3);
-    background-color: navy;
-    cursor: pointer;
-}
+
 
 .Task {    
     position: relative;
@@ -199,14 +191,15 @@
 }
   
 .preview {    
-    position: sticky;
+    position: fixed;
     background-color: #fff;
     width: 500px;
     height: 925px;
-    top: 0px;
-    float: right;
+    top: 63px;
+    right: 0;
     box-shadow: 0 5px 15px rgba(0,0,0,0.3);
     z-index: 2;
+    float:right;
 }
 
 .preview h1 {
