--- a/src/Components/Mission.css
+++ b/src/Components/Mission.css
@@ -1,6 +1,6 @@
 .background {
     width: 100%;
-    height: 100%;
+    height: 100em;
     z-index: -1;
     background-size: fill;
     background: url(./Images/Background.jpg);    
@@ -81,6 +81,8 @@
     align-items: center; 
     justify-content: center;
     z-index: 4;    
+    transition: all 0.3s ease-in-out;
+    /* background: url(./Images/checkmark_notDone.png);    */
     cursor:default;
 }
 
@@ -143,7 +145,7 @@
     margin-left: 170px;
     margin-top: 30px;
     z-index: 8;
-    background: url(./Images/checkmark_notDone.png);   
+    background: url(./Images/checkmark_notDone.png);
 }
 
 .Task ul {
