--- a/src/Components/TaskReview/TaskReviewHelp.css
+++ b/src/Components/TaskReview/TaskReviewHelp.css
@@ -7,6 +7,8 @@
    border-radius: 15px;
    justify-content: center;
    text-align: left;
+   margin-top: 2em;
+   padding: 1em;
 }
 
 .HelpBlock input[type='radio'], label{   
