Initial Beta Deployment (#28)
* Student Progress Overview

* Hot fix

* Extract Task Review logic into separate object

* Prog view (#15)

* Student Progress Overview

* Student Progress Overview

* Student Progress Overview

* Student Progress Overview

* Remove package-lock to match main

Co-authored-by: ConnorBoulais <connorboulais@gmail.com>

* Add Basic MasteryProgress Screen, Connect to Dev Backend (#18)

* Implement MasteryProgress and TargetDetails Components

* Modify MissionsScreen to use live backend data

* Modify App Title to Match Design

* MissionProgress component created

* Extract Task Review logic into separate object (#19)

* HOTFIX add question options to taskQA data in TaskReview

* Done with TaskReview and partially done with quiz review

* Fixed centering issue on resize

* Fixed CSS issue

* Mission Progress related components reorganized, list of tasks with scores added, progress page header with toggle button added

* fixed progress bar alignment

* fixed progress circle centering

* added column view of mission progress circles

* task results and help screen + percentage bar refactor

* fixed crashing bug on task review help

* removed grades link from nav drawer and added some comments to the Mission Progress code

* Style MaseryProgress, Update Goals (#20)

* Implement MasteryProgress and TargetDetails Components

* Modify MissionsScreen to use live backend data

* Modify App Title to Match Design

* Add Target List next to TargetDetails

* Add Parent DueDate on Goals

* Connect 'DeleteGoal' to backend

* Add confirmation to deleteGoal

* Make whole card clickable on mastery progress

* Remove title from mastery progress page

* Quiz Review Completed

* Mission styling (#23)

* Student Progress Overview

* Styling Mission Overview Page

* Removing package-lock.json

* HOTFIX

* HOTFIX fix mission query

* HOTFIX fix GET_ALL_MISSION_PROGRESS query in

--- a/src/Components/CourseScreen.css
+++ b/src/Components/CourseScreen.css
@@ -43,15 +43,6 @@
   margin: auto;
 }
 
-
-/* form {
-  position: relative;
-  top:50px;
-  margin:auto;
-  text-align: center;
-  padding-left: 100 px;
-} */
-
 .submitbutton {
   vertical-align: middle;
   position: relative;
@@ -73,19 +64,6 @@
   padding-right:5px;
 }
 
-/* h3 {
-  color: #4274F3;
-  font-family: "Poppins", sans-serif;
-  font-weight: bold;
-  font-size: 27px;
-}
-
-p {
-  color: white;
-  font-family: "Poppins", sans-serif;
-  font-weight: bold;
-  font-size: 15px;
-} */
 
 .btn {
   text-align: center;
@@ -94,4 +72,17 @@ p {
 ul {
   color: #fff;
   padding-left:0;
+}
+
+h6 {
+  color: #4274F3;
+    font-family: "Poppins", sans-serif;
+    font-size: 50px;
+    font-weight:normal;
+    margin: auto;
+    width: 50%;
+    padding: 10px;
+    text-align: center; 
+    vertical-align: middle;
+  padding-top: 75px;
 }
