--- a/src/App.css
+++ b/src/App.css
@@ -45,6 +45,11 @@ h2 {
     padding: 0;
     overflow: hidden;
     background-color: #4274F3;
+    position:fixed;
+    width: 100%;
+    z-index: 10;
+    top: 0px;
+    margin-bottom: 10px;
 }
 
 .title {
