--- a/src/Components/Mission.css
+++ b/src/Components/Mission.css
@@ -1,47 +1,190 @@
-.SubMission {
-    position: relative;
-    background-color: #F21E1D;
+.background {
+    width: 100%;
+    height: 100em;
+    z-index: -1;
+    background-size: fill;
+    background: url(./Images/Background.jpg);    
+}
+
+.missionTitle {
+    position:fixed;
+    width: 234px;
+    height: 234px;
+    top: 75px;
+    border-radius: 50%;
+    background-color: #fff;  
+    border-style: solid;
+    border-color: #4274F3;  
+    border-width: 10px;
+    transition: all 0.3s ease-in-out;
+    left: 100px;
+    z-index:12;
+    background: url(./Images/rocket.png);  
+}
+
+.missiontext {
+    position: fixed;
+    top: 105px;
+    width: 700px;
+    height: 200px;
+    left: 290px;
+    background-color: #4274F3;    
     color: white;
     font-family: "Poppins", sans-serif;
     font-size: 35px;
-    margin: auto;
-    margin-top: 20px;
-    border-radius: 50%;
-    width: 200px;
-    height: 200px;
-    display: flex;
-    align-items: center; 
-    justify-content: center;
+    border-radius: 10px;
+    z-index: 10;
+}
+
+.missiontext h1 {
+    color: #F2C94C;
+    font-family: Poppins;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 36px;
+    line-height: 54px;
+    text-align: left;
+}
+
+.missiontext h2 {
+    color: #fff;
+    font-family: Poppins;
+    font-style: normal;
+    font-weight: 300;
+    font-size: 18px;
+    line-height: 27px;
+    text-align: left;
+    margin-left: 80px;
 }
 
 .row {
     display: flex;
   }
   
-  .column {
+.column {
     flex: 50%;
-  }
+}
+
+.SubMission {
+    position: relative;
+    background-color: #dad8d8;
+    color: #4274F3;
+    opacity: 90%;
+    font-family: "Poppins", sans-serif;
+    font-size: 35px;
+    margin-left: 175px;
+    margin-top: 30px;
+    border-radius: 50%;
+    width: 100px;
+    height: 100px;
+    display: flex;
+    align-items: center; 
+    justify-content: center;
+    z-index: 4;    
+    transition: all 0.3s ease-in-out;
+    /* background: url(./Images/checkmark_notDone.png);    */
+    cursor:default;
+}
+
+.SubMission ul {
+    position:absolute;
+    width: 400px;
+    height: 88px;
+    background: #dad8d8;
+    opacity: 90%;
+    border-radius: 10px;
+    margin-left: 550px;
+    z-index: 2;
+    padding-left: 10px; 
+    color:#4274F3;  
+}
+
+.SubMission h5 {
+    color: #2F80ED;
+    font-family: Poppins;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 16px;
+    text-align: left;
+    margin-left: 30px;
+    margin-top: -5px;
+}
+
+.SubMission h2 {
+    color: #000;
+    font-family: Poppins;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 16px;
+    text-align: left;
+    margin-left: 30px;
+    margin-top: 20px;
+}
+
+
 
 .Task {    
     position: relative;
     display: flex;
-    width: 200px;
-    height: 200px;
+    width: 100px;
+    height: 100px;
     border-radius: 50%;
-    background-color: #4274F3;
-    color: white;
+    background-color: #fff;
+    color: #4274F3;
+    border-color: #4274F3;
+    border-style: solid;
+    border-width: 5px;
     font-family: "Poppins", sans-serif;
     font-size: 35px;
     box-shadow: 0 1px 2px rgba(0,0,0,0.15);
     transition: all 0.3s ease-in-out;
     align-items: center; 
     justify-content: center;
-    margin: auto;
+    margin-left: 170px;
+    margin-top: 30px;
+    z-index: 8;
+    background: url(./Images/checkmark_notDone.png);
+}
+
+.Task ul {
+    position:absolute;
+    width: 400px;
+    height: 88px;
+    background: #F2F2F2;
+    border-radius: 10px;
+    margin-left: 550px;
+    z-index: 6;
+    padding-bottom: 10px;
+    box-shadow: 0 1px 2px rgba(0,0,0,0.15);
+}
+
+.Task h5 {
+    color: #2F80ED;
+    font-family: Poppins;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 16px;
+    text-align: left;
+    margin-left: 30px;
     margin-top: 20px;
 }
 
+.Task h2 {
+    color: #000;
+    font-family: Poppins;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 16px;
+    text-align: left;
+    margin-left: 30px;
+    margin-top: -20px;
+    
+}
 
-  /* Scale up the box */
 .Task:hover {
     transform: scale(1.05, 1.05);
     box-shadow: 0 5px 15px rgba(0,0,0,0.3);
@@ -49,47 +192,35 @@
     cursor: pointer;
 }
   
-.card {
-    padding: 20px;
-    background-color: #CFDCFC;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;
-    width: 70%;
-    vertical-align: middle;
-    border-radius: 5px;
+.preview {    
+    position: fixed;
+    background-color: #fff;
+    width: 500px;
+    height: 925px;
+    top: 63px;
+    right: 0;
+    box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+    z-index: 2;
+    float:right;
 }
 
-.card h1 {
+.preview h1 {
     width: 100%;
 }
 
 .MissonOverview ul {
     color: #FFF;
-    font-size: 18px;
-    text-align: center;    
+    font-size: 18px; 
   }
 
-
-/*.Task:first-child {
-    margin-top: 0;
+.taskSpace {
+    margin-top:350px;
 }
-.Task:after {
-    position: absolute; 
-    border: 3px solid #000; 
-    width: 0; 
-    height: 15px; 
-    display: block; 
-    content: ''; 
-    left: 50%; 
-    z-index: 1; 
-    top: 200px; 
-    margin-left: -1px;
-}*/
-
 
 .vl {
     position: absolute;    
     border-left: 6px solid #000;
     margin-left: 480px;
     height: 640px;
+    z-index: 2;
 }
