--- a/src/Components/MissionsScreen.css
+++ b/src/Components/MissionsScreen.css
@@ -61,3 +61,15 @@
     background-color: navy;
     cursor: pointer;
 }
+
+.previewCard {    
+    position: sticky;
+    background-color: #fff;
+    width: 500px;
+    height: 1000px;
+    top: 63px;
+    right: 0;
+    box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+    z-index: 2;
+    float:right;
+}
